解决启动页面问题上传简历跳转次数过多问题

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -44,6 +44,7 @@
     <color name="black20">#202020</color>
     <color name="brownFF6406">#FF6406</color>
     <color name="translucentBlue">#0D02B8F7</color>
+    <color name="trans">#00000000</color>
 
 
 
