--- a/app/src/main/res/layout/row_list.xml
+++ b/app/src/main/res/layout/row_list.xml
@@ -55,6 +55,8 @@
                     android:id="@+id/textbottom"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="2"
                     android:textSize="13sp"
                     android:textColor="#FF999999"
                     android:layout_marginTop="3dp"/>
