--- a/app/src/main/res/layout/collection_company.xml
+++ b/app/src/main/res/layout/collection_company.xml
@@ -48,6 +48,8 @@
                     android:id="@+id/texttop"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="1"
                     android:textSize="16sp"
                     android:textColor="#FF202020"
                     android:layout_marginTop="15dp"/>
