--- a/app/src/main/res/values/url.xml
+++ b/app/src/main/res/values/url.xml
@@ -1,4 +1,5 @@
 <resources>
+    <!-- 测试地址 -->
     <string name="userUrl" translatable="false">https://user.sk.cgland.top/</string>
     <string name="interUrl" translatable="false">https://interview.sk.cgland.top/</string>
     <string name="jobUrl" translatable="false">https://job.sk.cgland.top/</string>
@@ -6,8 +7,33 @@
     <string name="authUrl" translatable="false">https://auth.sk.cgland.top/</string>
     <string name="baseUrl" translatable="false">https://basic-info.sk.cgland.top/</string>
     <string name="industryUrl" translatable="false">https://industry.sk.cgland.top/</string>
-    <string name="fileUploadUrl" translatable="false">https://industry.sk.cgland.top/</string>
     <string name="orgUrl" translatable="false">https://org.sk.cgland.top/</string>
-    <string name="organizationUrl" translatable="false">https://organization-position.sk.cgland.top</string>
+    <string name="organizationUrl" translatable="false">https://organization-position.sk.cgland.top/</string>
     <string name="mailUrl" translatable="false">https://mail.sk.cgland.top/</string>
+    <string name="pushUrl" translatable="false">https://push.sk.cgland.top/</string>
+    <string name="reportUrl" translatable="false">https://report.sk.cgland.top/</string>
+    <string name="helpUrl" translatable="false">https://help.sk.cgland.top/</string>
+    <string name="praiseUrl" translatable="false">https://praise.sk.cgland.top/</string>
+    <string name="appVersionUrl" translatable="false">https://app-version.sk.cgland.top/</string>
+    <string name="imUrl" translatable="false">https://im.sk.cgland.top/</string>
+    <string name="jitsiUrl" translatable="false">https://jitsi.sk.cgland.top/</string>
+
+    <!-- 正式地址 -->
+    <!--<string name="userUrl" translatable="false">https://user.sk.skjob.jp/</string>-->
+    <!--<string name="interUrl" translatable="false">https://interview.sk.skjob.jp/</string>-->
+    <!--<string name="jobUrl" translatable="false">https://job.sk.skjob.jp/</string>-->
+    <!--<string name="storageUrl" translatable="false">https://storage.sk.skjob.jp/</string>-->
+    <!--<string name="authUrl" translatable="false">https://apass.sklife.jp/</string>-->
+    <!--<string name="baseUrl" translatable="false">https://basic-info.sk.skjob.jp/</string>-->
+    <!--<string name="industryUrl" translatable="false">https://industry.sk.skjob.jp/</string>-->
+    <!--<string name="orgUrl" translatable="false">https://org.sk.skjob.jp/</string>-->
+    <!--<string name="organizationUrl" translatable="false">https://organization-position.sk.skjob.jp/</string>-->
+    <!--<string name="mailUrl" translatable="false">https://mail.sk.skjob.jp/</string>-->
+    <!--<string name="pushUrl" translatable="false">https://push.sk.skjob.jp/</string>-->
+    <!--<string name="reportUrl" translatable="false">https://report.sk.skjob.jp/</string>-->
+    <!--<string name="helpUrl" translatable="false">https://help.sk.skjob.jp/</string>-->
+    <!--<string name="praiseUrl" translatable="false">https://praise.sk.skjob.jp/</string>-->
+    <!--<string name="appVersionUrl" translatable="false">https://app-version.sk.skjob.jp/</string>-->
+    <!--<string name="imUrl" translatable="false">https://im.sk.skjob.jp/</string>-->
+    <!--<string name="jitsiUrl" translatable="false">https://jitsi.sk.skjob.jp/</string>-->
 </resources>
