电话格式验证放开,求职意向更新与添加提示

--- a/app/src/main/res/values/prompt.xml
+++ b/app/src/main/res/values/prompt.xml
@@ -82,4 +82,6 @@
 
     <!--JlmainBodyFragment-->
     <string name="getInitFail">就職希望取得エラー</string>
+
+    <string name="updateFailOne">更新失敗</string>
 </resources>
